--- a/package.json
+++ b/package.json
@@ -1,12 +1,26 @@
 {
-  "name": "qr-menu-react-cart",
+  "name": "@tably/core",
   "version": "1.0.0",
-  "private": true,
+  "private": false,
   "type": "module",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    },
+    "./styles": "./dist/style.css"
+  },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "build:lib": "vite build --mode library",
+    "preview": "vite preview",
+    "prepublishOnly": "npm run build:lib"
   },
   "dependencies": {
     "clsx": "2.1.1",
@@ -24,5 +38,9 @@
     "postcss": "8.4.44",
     "tailwindcss": "3.4.10",
     "vite": "^4.5.3"
+  },
+  "peerDependencies": {
+    "react": ">=18.0.0",
+    "react-dom": ">=18.0.0"
   }
 }
