--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Build outputs
-dist/
-build/
+# Build outputs (commented out for library distribution)
+# dist/
+# build/
 
 # Environment variables
 .env
