--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,5 +65,7 @@ jobs:
           curl -X POST \
             -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/${{ github.repository_owner }}/main/dispatches \
+            https://api.github.com/repos/obiedh/main/dispatches \
             -d '{"event_type":"tably-core-updated","client_payload":{"version":"'$VERSION'"}}'
+          
+          echo "Triggered update for main project with version: $VERSION"
