--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,11 +61,29 @@ jobs:
       - name: Trigger main project update
         if: github.ref == 'refs/heads/main'
         run: |
-          # Trigger main project to update
-          curl -X POST \
-            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/obiedh/main/dispatches \
-            -d '{"event_type":"tably-core-updated","client_payload":{"version":"'$VERSION'"}}'
+          echo "Attempting to trigger main project update..."
+          echo "Version: $VERSION"
+          echo "Repository: Ebrahem1999/main"
           
-          echo "Triggered update for main project with version: $VERSION"
+          # Trigger main project to update
+          RESPONSE=$(curl -s -w "\n%{http_code}" -X POST \
+            -H "Authorization: token ${{ secrets.PAT_TOKEN }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            https://api.github.com/repos/Ebrahem1999/main/dispatches \
+            -d '{"event_type":"tably-core-updated","client_payload":{"version":"'$VERSION'"}}')
+          
+          HTTP_CODE=$(echo "$RESPONSE" | tail -n1)
+          RESPONSE_BODY=$(echo "$RESPONSE" | head -n -1)
+          
+          echo "HTTP Status Code: $HTTP_CODE"
+          echo "Response: $RESPONSE_BODY"
+          
+          if [ "$HTTP_CODE" = "204" ]; then
+            echo "✅ Successfully triggered main project update"
+          else
+            echo "❌ Failed to trigger main project update"
+            echo "This might be due to:"
+            echo "1. Repository permissions not set correctly"
+            echo "2. Actions not enabled on the main repository"
+            echo "3. Workflow permissions not configured"
+          fi
