--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,32 +58,84 @@ jobs:
           
           echo "Created tag: $VERSION"
           
-      - name: Trigger main project update
+      - name: Trigger environment updates
         if: github.ref == 'refs/heads/main'
         run: |
-          echo "Attempting to trigger main project update..."
+          echo "Triggering updates for all environments..."
           echo "Version: $VERSION"
-          echo "Repository: Ebrahem1999/main"
           
-          # Trigger main project to update
-          RESPONSE=$(curl -s -w "\n%{http_code}" -X POST \
+          # ========================================
+          # ADD NEW ENVIRONMENTS HERE
+          # ========================================
+          # Copy the curl command below and change:
+          # 1. Repository name (e.g., Ebrahem1999/main-staging)
+          # 2. Event type (e.g., tably-core-updated-staging)
+          # ========================================
+          
+          # PRODUCTION ENVIRONMENT
+          echo "Triggering PRODUCTION update..."
+          RESPONSE_PROD=$(curl -s -w "\n%{http_code}" -X POST \
             -H "Authorization: token ${{ secrets.PAT_TOKEN }}" \
             -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/Ebrahem1999/main/dispatches \
             -d '{"event_type":"tably-core-updated","client_payload":{"version":"'$VERSION'"}}')
           
-          HTTP_CODE=$(echo "$RESPONSE" | tail -n1)
-          RESPONSE_BODY=$(echo "$RESPONSE" | head -n -1)
+          HTTP_CODE_PROD=$(echo "$RESPONSE_PROD" | tail -n1)
+          RESPONSE_BODY_PROD=$(echo "$RESPONSE_PROD" | head -n -1)
           
-          echo "HTTP Status Code: $HTTP_CODE"
-          echo "Response: $RESPONSE_BODY"
+          echo "PRODUCTION - HTTP Status: $HTTP_CODE_PROD"
+          echo "PRODUCTION - Response: $RESPONSE_BODY_PROD"
           
-          if [ "$HTTP_CODE" = "204" ]; then
-            echo "✅ Successfully triggered main project update"
+          if [ "$HTTP_CODE_PROD" = "204" ]; then
+            echo "✅ Successfully triggered PRODUCTION update"
           else
-            echo "❌ Failed to trigger main project update"
-            echo "This might be due to:"
-            echo "1. Repository permissions not set correctly"
-            echo "2. Actions not enabled on the main repository"
-            echo "3. Workflow permissions not configured"
+            echo "❌ Failed to trigger PRODUCTION update"
           fi
+          
+          # ========================================
+          # STAGING ENVIRONMENT (EXAMPLE)
+          # ========================================
+          # Uncomment and modify the lines below to add staging environment:
+          #
+          # echo "Triggering STAGING update..."
+          # RESPONSE_STAGING=$(curl -s -w "\n%{http_code}" -X POST \
+          #   -H "Authorization: token ${{ secrets.PAT_TOKEN }}" \
+          #   -H "Accept: application/vnd.github.v3+json" \
+          #   https://api.github.com/repos/Ebrahem1999/main-staging/dispatches \
+          #   -d '{"event_type":"tably-core-updated-staging","client_payload":{"version":"'$VERSION'"}}')
+          #
+          # HTTP_CODE_STAGING=$(echo "$RESPONSE_STAGING" | tail -n1)
+          # if [ "$HTTP_CODE_STAGING" = "204" ]; then
+          #   echo "✅ Successfully triggered STAGING update"
+          # else
+          #   echo "❌ Failed to trigger STAGING update"
+          # fi
+          
+          # ========================================
+          # DEVELOPMENT ENVIRONMENT (EXAMPLE)
+          # ========================================
+          # Uncomment and modify the lines below to add development environment:
+          #
+          # echo "Triggering DEVELOPMENT update..."
+          # RESPONSE_DEV=$(curl -s -w "\n%{http_code}" -X POST \
+          #   -H "Authorization: token ${{ secrets.PAT_TOKEN }}" \
+          #   -H "Accept: application/vnd.github.v3+json" \
+          #   https://api.github.com/repos/Ebrahem1999/main-dev/dispatches \
+          #   -d '{"event_type":"tably-core-updated-dev","client_payload":{"version":"'$VERSION'"}}')
+          #
+          # HTTP_CODE_DEV=$(echo "$RESPONSE_DEV" | tail -n1)
+          # if [ "$HTTP_CODE_DEV" = "204" ]; then
+          #   echo "✅ Successfully triggered DEVELOPMENT update"
+          # else
+          #   echo "❌ Failed to trigger DEVELOPMENT update"
+          # fi
+          
+          # ========================================
+          # ADD MORE ENVIRONMENTS AS NEEDED
+          # ========================================
+          # Follow the same pattern:
+          # 1. Copy the curl command
+          # 2. Change repository name
+          # 3. Change event type
+          # 4. Add success/failure logging
+          # ========================================
