feat: Update locale files and build workflow
- Update translations in en.json, ar.json, and he.json
- Modify build workflow configuration
- Include latest locale improvements and workflow enhancements

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -111,3 +111,4 @@ jobs:
           
           # Trigger updates for all projects
           trigger_repo_update "main" "Ebrahem1999"
+          trigger_repo_update "zuwade" "Ebrahem1999"
